# sane-backends

./: .cproject  .editorconfig  .gitignore  .gitlab-ci.yml  .project  0001-Updating-register-values-for-HPN6310-CCD_Sensor.patch  AUTHORS  ChangeLog  ChangeLog-1.0.11  ChangeLog-1.0.13  ChangeLog-1.0.14  ChangeLog-1.0.9  INSTALL.linux  LEVEL2  LICENSE  Makefile.am  Makefile.in  NEWS  PROBLEMS  PROJECTS  README  README.aix  README.beos  README.darwin  README.djpeg  README.freebsd  README.hp-ux  README.irix  README.linux  README.md  README.netbsd  README.openbsd  README.os2  README.solaris  README.unixware2  README.unixware7  README.windows  README.zeta  TODO  acinclude.m4  (+15 more)
ChangeLogs/: ChangeLog-1.0.0  ChangeLog-1.0.1  ChangeLog-1.0.10  ChangeLog-1.0.11  ChangeLog-1.0.12  ChangeLog-1.0.13  ChangeLog-1.0.14  ChangeLog-1.0.15  ChangeLog-1.0.16  ChangeLog-1.0.17  ChangeLog-1.0.18  ChangeLog-1.0.19  ChangeLog-1.0.2  ChangeLog-1.0.20  ChangeLog-1.0.21  ChangeLog-1.0.22  ChangeLog-1.0.23  ChangeLog-1.0.24  ChangeLog-1.0.25  ChangeLog-1.0.27  ChangeLog-1.0.28  ChangeLog-1.0.3  ChangeLog-1.0.4  ChangeLog-1.0.5  ChangeLog-1.0.6  ChangeLog-1.0.7  ChangeLog-1.0.8  ChangeLog-1.0.9
backend/: .gitignore  12.pnm  GUIDE  Makefile.am  Makefile.in  abaton.c  abaton.desc  abaton.h  agfafocus.c  agfafocus.desc  agfafocus.h  apple.c  apple.desc  apple.h  artec.c  artec.desc  artec.h  artec_eplus48u.c  artec_eplus48u.conf  artec_eplus48u.conf.in  artec_eplus48u.h  as6e.c  as6e.desc  as6e.h  avision.c  avision.conf  avision.conf.in  avision.desc  avision.h  bh.c  bh.desc  bh.h  canon-sane.c  canon-scsi.c  canon.c  canon.conf.in  canon.desc  canon.h  canon630u-common.c  canon630u.c  (+596 more)
backend/escl/: ScannerCapabilities.xml  escl.c  escl.h  escl_capabilities.c  escl_crop.c  escl_devices.c  escl_jpeg.c  escl_mupdf.c  escl_newjob.c  escl_pdf.c  escl_png.c  escl_reset.c  escl_scan.c  escl_status.c  escl_tiff.c
backend/genesys/: buffer.cpp  buffer.h  calibration.h  command_set.h  command_set_common.cpp  command_set_common.h  conv.cpp  conv.h  device.cpp  device.h  enums.cpp  enums.h  error.cpp  error.h  fwd.h  genesys.cpp  genesys.h  gl124.cpp  gl124.h  gl124_registers.h  gl646.cpp  gl646.h  gl646_registers.h  gl841.cpp  gl841.h  gl841_registers.h  gl842.cpp  gl842.h  gl842_registers.h  gl843.cpp  gl843.h  gl843_registers.h  gl846.cpp  gl846.h  gl846_registers.h  gl847.cpp  gl847.h  (+48 more)
doc/: .gitignore  Makefile.am  Makefile.in  backend-writing.txt  canon.README  canon.install2700F.txt  descriptions.txt  doxygen-genesys.conf  doxygen-sanei.conf  doxygen-sanei.conf.in  gamma4scanimage.man  net.tex  realeases.txt  releases.md  releases.txt  sane-abaton.man  sane-agfafocus.man  sane-apple.man  sane-artec.man  sane-artec_eplus48u.man  sane-as6e.man  sane-avision.man  sane-bh.man  sane-canon.man  sane-canon630u.man  sane-canon_dr.man  sane-canon_lide70.man  sane-canon_pp.man  sane-cardscan.man  sane-config.man  sane-coolscan.man  sane-coolscan2.man  sane-coolscan3.man  sane-dc210.man  sane-dc240.man  sane-dc25.man  sane-dll.man  sane-dmc.man  sane-epjitsu.man  sane-epson.man  (+91 more)
frontend/: .gdbinit  .gitignore  Makefile.am  Makefile.in  gtkglue.c  gtkglue.h  preferences.c  preferences.h  preview.c  preview.h  progress.c  progress.h  sane-style.rc  saned.c  scanimage.c  sicc.c  sicc.h  stiff.c  stiff.h  test.c  tstbackend.c  xcam.README  xcam.c  xscanimage.c
include/: .gitignore  Makefile.am  Makefile.in  getopt.h  lalloca.h  lassert.h  md5.h
japi/: ImageCanvas.java  ImageCanvasClient.java  Jscanimage.java  Makefile.am  Makefile.in  Sane.c  Sane.java  SaneDevice.java  SaneOption.java  SaneParameters.java  SaneRange.java  ScanIt.java  Test.java
lib/: Makefile.am  Makefile.in  alloca.c  getenv.c  getopt.c  getopt1.c  inet_ntop.c  inet_pton.c  isfdtype.c  md5.c  sigprocmask.c  snprintf.c  strcasestr.c  strdup.c  strndup.c  strsep.c  usleep.c  vsyslog.c
m4/: byteorder.m4  libtool.m4
po/: .gitignore  LINGUAS  Makefile.am  Makefile.in  Makevars  POTFILES  POTFILES.in  README  Rules-automake  artec_eplus48u.de.po  bg.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  en_GB.po  eo.po  epson.de.po  epson.ru.po  epson.sv.po  es.po  fi.po  fr.po  gl.po  gt68xx.de.po  he.po  hu.po  it.po  ja.po  matsushita.fr.po  matsushita.ru.po  mustek.de.po  mustek.ru.po  mustek_usb.de.po  mustek_usb.ru.po  nb.po  nl.po  pl.po  plustek.de.po  (+47 more)
sanei/: Makefile.am  Makefile.in  linux_sg3_err.h  os2_srb.h  sanei_DomainOS.c  sanei_DomainOS.h  sanei_ab306.c  sanei_access.c  sanei_auth.c  sanei_codec_ascii.c  sanei_codec_bin.c  sanei_config.c  sanei_config2.c  sanei_constrain_value.c  sanei_init_debug.c  sanei_ir.c  sanei_jpeg.c  sanei_lm983x.c  sanei_load_values.c  sanei_magic.c  sanei_net.c  sanei_pa4s2.c  sanei_pio.c  sanei_pp.c  sanei_pv8630.c  sanei_save_values.c  sanei_scsi.c  sanei_tcp.c  sanei_thread.c  sanei_udp.c  sanei_usb.c  sanei_wire.c  test_wire.c
testsuite/: Makefile.am  Makefile.in  README  testfile.pnm
testsuite/backend/genesys/: Makefile.am  minigtest.cc  minigtest.cpp  minigtest.h  session_config_test.cpp  tests.cc  tests.cpp  tests.h  tests_calibration.cc  tests_calibration.cpp  tests_image.cc  tests_image.cpp  tests_image_pipeline.cc  tests_image_pipeline.cpp  tests_motor.cpp  tests_printers.h  tests_row_buffer.cc  tests_row_buffer.cpp  tests_sensor.cc  tests_utilities.cpp
testsuite/sanei/: Makefile.am  Makefile.in  README  sanei_check_test.c  sanei_config_test.c  sanei_constrain_test.c  sanei_usb_test.c
testsuite/tools/: Makefile.am  Makefile.in  README
testsuite/tools/data/: ascii.ref  db.ref  html-backends-split.ref  html-mfgs.ref  hwdb.ref  testfile.desc  udev+acl.ref  udev+hwdb.ref  udev.ref  usermap.ref  xml.ref
tools/: .gitignore  Makefile.am  Makefile.in  README  RenSaneDlls.cmd  check-po.awk  check-usb-chip.c  create-changelog.sh  epson2usb.pl  find-scanner.c  gamma4scanimage.c  libtool-get-dll-ext  mustek600iin-off.c  sane-backends.pc.in  sane-config.in  sane-desc-ext.el  sane-desc.c  sane-desc.el  sane-desc.el.in  sane-find-scanner.c  style-check.sh  umax_pp.c  update-upstream.sh  update-upstreams.sh
(+265 files in other folders)
